Thu Jun  3 16:07:35 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/DnC_Dump.h: 
	* DnC/Config_Handlers/DnC_Dump.cpp:

	Added the methods required to dump referenced values
	correctly. Dump functions are chaged accordingly.

Thu Jun  3 14:19:31 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/ExecutionManager/ExecutionManager.mpc:
        * DnC/ExecutionManager/Execution_Manager.cpp:

          Removed CIAO::Server_init () method calls from the server, as
          this server does not need capabilities for explicitly processing
          valuetypes. These calls are already present in NodeApplication
          entity.

Thu Jun  3 12:35:51 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_T.cpp:
        * ciao/Servant_Impl_T.h:
        * ciao/Servant_Impl_Base.cpp:
        * ciao/Servant_Impl_Base.h:

          New files added to CIAO_Server. A template base class is now
          inserted into the inheritance hierarchy between the skeleton
          class of the component's equivalent interface and the
          servant class generated by the CIDL compiler. This template
          class also has a non-template base class to hold code that
          is based neither on the template parameters or on the
          inheritance chain. These two classes will hold code common
          to all generated servant classes, templatized for the
          skeleton class type, the executor type and the context type.
          So far, only get_all_facets() and get_all_consumers() have
          been factored out and implemented.

        * ciao/CCM_Core.mpc:

          Changes to reflect the items above. Also added -Sc to the
          generated IDL compiler command line of each project to
          suppress the generation of the TIE classes.

        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:

          Change to reflect the items listed above, and also a new