@@ -1,3 +1,10 @@
+Thu Jun  3 16:10:11 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantHeaderGenerator.cpp:
+        
+          Forgot to remove generated members of the servant class that
+          have been moved to the base classes.
+
 Thu Jun  3 16:07:35 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
 
 	* DnC/Config_Handlers/DnC_Dump.h: 
